# OAHWR-MSHMM

./: LICENSE  OAHWR-MSHMM.rar  README.md
ouhawr_analytic/: README.md
ouhawr_analytic/src/: CMakeLists.txt  Database.cpp  Database.hpp  Decoder.cpp  Distributions.cpp  EmbeddedTrainer.cpp  MSDHMM.hpp  Preprocessing.cpp  Preprocessing.hpp  README.md  StreamHMM.cpp  main.cpp
ouhawr_holistic/: README.md  requirements.txt  setup.py
ouhawr_holistic/configs/: default_config.yaml
ouhawr_holistic/ouhawr/: __init__.py  pipeline.py
ouhawr_holistic/ouhawr/classification/: __init__.py  svm_classifier.py
ouhawr_holistic/ouhawr/data/: __init__.py  ifn_enit_loader.py  lexicon_sampler.py
ouhawr_holistic/ouhawr/descriptors/: __init__.py  ldnp.py  lpq_plus.py  wld.py
ouhawr_holistic/ouhawr/dimensionality_reduction/: __init__.py  combined_reductions.py  lda_reduction.py  lsdr_reduction.py  pca_reduction.py  reducer_factory.py
ouhawr_holistic/ouhawr/fusion/: __init__.py  dca_fusion.py
ouhawr_holistic/ouhawr/preprocessing/: image_preprocessing.py
ouhawr_holistic/ouhawr/utils/: __init__.py  cross_validation.py  metrics.py
ouhawr_holistic/scripts/: cross_validate_params.py  extract_features.py  train_and_evaluate.py
ouhawr_holistic/tests/: test_descriptors.py  test_fusion.py  test_pipeline.py  test_reduction.py
